name:           snaplet-hdbc
version:        0.6.0
synopsis:       HDBC snaplet
description:    HDBC snaplet
license:        BSD3
license-file:   LICENSE
author:         Jurriën Stutterheim
maintainer:     j.stutterheim@me.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://norm2782.com/
category:       Web

extra-source-files:  LICENSE

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Auth.Backends.Hdbc
    Snap.Snaplet.Hdbc

  build-depends:
    base                      >= 4,
    bytestring                >= 0.9.1,
    clientsession             >= 0.4,
    containers                >= 0.3,
    convertible               >= 1.0,
    data-lens                 >= 2.0   && < 2.1,
    data-lens-template        >= 2.1   && < 2.2,
    HDBC                      >= 2.2,
    mtl                       >  2.0   && < 2.1,
    monad-control             >= 0.2,
    resource-pool             >= 0.2,
    snap                      >= 0.6   && < 0.7,
    text                      >= 0.11,
    time                      >= 1.2,
    unordered-containers      >= 0.1.4

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
