name:           snaplet-hdbc
version:        0.13
synopsis:       HDBC snaplet for Snap Framework
description:    This snaplet consists of two parts: an HDBC abstraction snaplet
                and an HDBC authentication backend for Snap's authentication
                snaplet.
license:        BSD3
license-file:   LICENSE
author:         Jurriën Stutterheim
maintainer:     j.stutterheim@me.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://norm2782.com/
category:       Web

extra-source-files:  LICENSE

source-repository head
  type:     git
  location: https://github.com/norm2782/snaplet-hdbc.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Auth.Backends.Hdbc
    Snap.Snaplet.Hdbc
    Snap.Snaplet.Hdbc.Types

  build-depends:
    base                       ,
    bytestring                 ,
    clientsession              ,
    containers                 ,
    convertible                ,
    data-lens                  ,
    data-lens-template         ,
    HDBC                       ,
    MonadCatchIO-transformers  ,
    mtl                        ,
    resource-pool-catchio      ,
    snap                       ,
    text                       ,
    time                       ,
    transformers               ,
    unordered-containers       

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
